// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > snapshots > should match snapshot IF errors are present 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="this-is-unique-string"
  >
    Login
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="login"
      class="cwa-block cwa-w-full cwa-rounded-md cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="this-is-unique-string"
      name="login"
      type="text"
    />
    <div>
      
      <cwa-utils-alert-warning-stub
        class="cwa-mt-2"
      >
        Login should be minimum 6 characters long
      </cwa-utils-alert-warning-stub>
      <cwa-utils-alert-warning-stub
        class="cwa-mt-2"
      >
        Login cannot contain whitespaces
      </cwa-utils-alert-warning-stub>
      
    </div>
  </div>
</div>
`;

exports[`InputField > snapshots > should match snapshot with passed content 1`] = `
<div>
  <label
    class="cwa-block cwa-text-sm cwa-font-medium cwa-leading-6 cwa-text-neutral-300"
    for="this-is-unique-string"
  >
    Login
  </label>
  <div
    class="cwa-mt-2"
  >
    <input
      autocomplete="login"
      class="cwa-block cwa-w-full cwa-rounded-md cwa-border-0 cwa-py-1.5 cwa-text-neutral-900 cwa-shadow-sm cwa-ring-1 cwa-ring-inset cwa-ring-neutral-300 placeholder:cwa-text-neutral-400 focus:cwa-ring-2 focus:cwa-ring-inset focus:cwa-ring-neutral-600 sm:cwa-text-sm sm:cwa-leading-6"
      id="this-is-unique-string"
      name="login"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;
